Mudança no navegador
Mostra pagina atual

--- a/fale.html
+++ b/fale.html
@@ -24,12 +24,13 @@
         <a href="sobre.html">Sobre Nós</a>
         <a href="produtos.html">Produtos</a>
         <a href="parceiros.html">Parceiros & Investidores</a>
-        <a href="fale.html">Fale Conosco</a>
+        <a href="fale.html" class="atual">Fale Conosco</a>
     </nav>
     <br>
     <main>
         <p><strong>Email:</strong> contato@sulfibra.com.br</p>
     </main>
+    <br>
     <footer>
         <p>Rodape: Não tem conteudo</p>
     </footer>
