--- a/parceiros.html
+++ b/parceiros.html
@@ -23,7 +23,7 @@
         <a href="patentes.html">Patentes</a>
         <a href="sobre.html">Sobre Nós</a>
         <a href="produtos.html">Produtos</a>
-        <a href="parceiros.html">Parceiros & Investidores</a>
+        <a href="parceiros.html" class="atual">Parceiros & Investidores</a>
         <a href="fale.html">Fale Conosco</a>
     </nav>
     <br>
@@ -35,6 +35,7 @@
             <li>One pager </li>
         </ul>
     </main>
+    <br>
     <footer>
         <p>Rodape: Não tem conteudo</p>
     </footer>
