--- a/patentes.html
+++ b/patentes.html
@@ -20,7 +20,7 @@
         <a href="home.html">Home Page</a>
         <a href="solucao.html">Solução do Problema</a>
         <a href="valor.html">Valor Agregado</a>
-        <a href="patentes.html">Patentes</a>
+        <a href="patentes.html" class="atual">Patentes</a>
         <a href="sobre.html">Sobre Nós</a>
         <a href="produtos.html">Produtos</a>
         <a href="parceiros.html">Parceiros & Investidores</a>
@@ -34,6 +34,7 @@
         <h1>Para as Esquadrias:</h1>
         <p><strong>Brasil:</strong> Pedido de patente de invenção de Produto e de Processo de Montagem, com registro no INPI sobre número BR 10 2024 023671-8, ainda sem pedido de opinião preliminar sobre a patenteabilidade;</p>
     </main>
+    <br>
     <footer>
         <p>Rodape: Não tem conteudo</p>
     </footer>
