--- a/produtos.html
+++ b/produtos.html
@@ -22,7 +22,7 @@
         <a href="valor.html">Valor Agregado</a>
         <a href="patentes.html">Patentes</a>
         <a href="sobre.html">Sobre Nós</a>
-        <a href="produtos.html">Produtos</a>
+        <a href="produtos.html" class="atual">Produtos</a>
         <a href="parceiros.html">Parceiros & Investidores</a>
         <a href="fale.html">Fale Conosco</a>
     </nav>
@@ -36,6 +36,7 @@
             <li>Dispositivos auxiliares</li>
     </ul>
     </main>
+    <br>
     <footer>
         <p>Rodape: Não tem conteudo</p>
     </footer>
