--- a/sobre.html
+++ b/sobre.html
@@ -21,7 +21,7 @@
         <a href="solucao.html">Solução do Problema</a>
         <a href="valor.html">Valor Agregado</a>
         <a href="patentes.html">Patentes</a>
-        <a href="sobre.html">Sobre Nós</a>
+        <a href="sobre.html" class="atual">Sobre Nós</a>
         <a href="produtos.html">Produtos</a>
         <a href="parceiros.html">Parceiros & Investidores</a>
         <a href="fale.html">Fale Conosco</a>
@@ -35,6 +35,7 @@
         <p>Garantia vitalícia.</p>
         <p>Construindo o futuro sem entulhos.</p>
     </main>
+    <br>
     <footer>
         <p>Rodape: Não tem conteudo</p>
     </footer>
