--- a/solucao.html
+++ b/solucao.html
@@ -18,7 +18,7 @@
     </header>
     <nav>
         <a href="home.html">Home Page</a>
-        <a href="solucao.html">Solução do Problema</a>
+        <a href="solucao.html" class="atual">Solução do Problema</a>
         <a href="valor.html">Valor Agregado</a>
         <a href="patentes.html">Patentes</a>
         <a href="sobre.html">Sobre Nós</a>
@@ -31,12 +31,13 @@
         <p>A wOrmhOle oferece a solução do problema da montagem trabalhosa das paredes, pilares, vigas e esquadrias, antecipando na fábrica todo o trabalho que tradicionalmente é executado na obra, tal como:</p>
         <ol>
             <li>Assentamento tradicional dos blocos com argamassa;</li>
-            <li>Caixarias para vigas e pilares, principalmente os pilares não embutidos na <a href="#" target="_blank">parede; [Link]</a></li>
-            <li><a href="#" target="_blank">Execução de rasgos nos blocos para passagem das armaduras horizontais e verticais; [Link]</a></li>
+            <li>Caixarias para vigas e pilares, principalmente os pilares não embutidos na <a href="#">parede; [Link]</a></li>
+            <li><a href="#">Execução de rasgos nos blocos para passagem das armaduras horizontais e verticais; [Link]</a></li>
             <li>Processo trabalhoso de preparação dos vãos e chumbamento das portas, janelas e quaisquer outros objetos a serem chumbados na parede; </li>
             <li>Chapisco, reboco, massa corrida, revestimento, rodapé, pintura e impermeabilização das paredes.</li>
         </ol>
     </main>
+    <br>
     <footer>
         <p>Rodape: Não tem conteudo</p>
     </footer>
