--- a/valor.html
+++ b/valor.html
@@ -19,7 +19,7 @@
     <nav>
         <a href="home.html">Home Page</a>
         <a href="solucao.html">Solução do Problema</a>
-        <a href="valor.html">Valor Agregado</a>
+        <a href="valor.html" class="atual">Valor Agregado</a>
         <a href="patentes.html">Patentes</a>
         <a href="sobre.html">Sobre Nós</a>
         <a href="produtos.html">Produtos</a>
@@ -51,6 +51,7 @@
             <li>Quem não procurar se adaptar às novas tecnologias vai ficar produzindo um produto obsoleto.</li>
         </ul>
     </main>
+    <br>
     <footer>
         <p>Rodape: Não tem conteudo</p>
     </footer>
