--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
         </div>
     </header>
     <nav>
-        <a href="home.html">Home Page</a>
+        <a href="home.html" class="atual">Home Page</a>
         <a href="solucao.html">Solução do Problema</a>
         <a href="valor.html">Valor Agregado</a>
         <a href="patentes.html">Patentes</a>
@@ -28,7 +28,7 @@
     </nav>
     <br>
     <main>
-        <a href="#" target="_blank">Conheça a tecnologia patenteável dos MEGGs para a construção de paredes, pilares e vigas de alvenaria. [Link]</a>
+        <a href="#">Conheça a tecnologia patenteável dos MEGGs para a construção de paredes, pilares e vigas de alvenaria. [Link]</a>
         <p>A wOrmhOle introduz o conceito da construção modular em nível dos menores elementos, denominados MEGGs, aplicável aos blocos, portas, janelas, caixas e qualquer outro objeto a ser embutido na parede.</p>
         <p>Devido ao processo de grauteamento limpo, introduz o conceito de blocos com acabamento final da parede a ser montada, incluindo pintura, revestimentos e qualquer outro tipo de acabamento desejado.</p>
         <p>Devido ao bloco estrutural ser de resistência maior ou igual a 14 MPa, devido ao impermeabilizante incorporado ao concreto, devido à opção de fornecimento e uso na cor natural, devido ao processo industrializado de aplicação de pintura, revestimentos, etc., pode introduzir o conceito de garantia vitalícia da parede montada para determinadas condições.</p>
@@ -41,6 +41,7 @@
         </ul>
         <p>Resultado: Com exceção do piso e da laje, o pavimento fica finalizado, ou seja, com pintura, revestimentos, rodapés, portas, janelas, caixas embutidas, etc. </p>
     </main>
+    <br>
     <footer>
         <p>Rodape: Não tem conteudo</p>
     </footer>
