Atualizar navegador e background

--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
     </nav>
     <br>
     <main>
-        <a href="#">Conheça a tecnologia patenteável dos MEGGs para a construção de paredes, pilares e vigas de alvenaria. [Link]</a>
+        <p><a href="#">Conheça a tecnologia patenteável dos MEGGs para a construção de paredes, pilares e vigas de alvenaria. [Link]</a></p>
         <p>A wOrmhOle introduz o conceito da construção modular em nível dos menores elementos, denominados MEGGs, aplicável aos blocos, portas, janelas, caixas e qualquer outro objeto a ser embutido na parede.</p>
         <p>Devido ao processo de grauteamento limpo, introduz o conceito de blocos com acabamento final da parede a ser montada, incluindo pintura, revestimentos e qualquer outro tipo de acabamento desejado.</p>
         <p>Devido ao bloco estrutural ser de resistência maior ou igual a 14 MPa, devido ao impermeabilizante incorporado ao concreto, devido à opção de fornecimento e uso na cor natural, devido ao processo industrializado de aplicação de pintura, revestimentos, etc., pode introduzir o conceito de garantia vitalícia da parede montada para determinadas condições.</p>
