--- a/home.html
+++ b/home.html
@@ -9,11 +9,10 @@
 </head>
 <body>
     <header>
-        <div>
-            <img src="imagens/Processamento_1/IMP_Logo B_1.jpg" alt="logo">
-        </div>
-        <div>
-            <img src="imagens/Processamento_1/Logo C_1.jpg" alt="nome">
+        <div class="container">
+            <div class="conteudo">
+                <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
+            </div>
         </div>
     </header>
     <nav>
