--- a/sobre.html
+++ b/sobre.html
@@ -8,14 +8,8 @@
     <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <div class="conteudo">
-                <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
-            </div>
-        </div>
-    </header>
     <nav>
+        <img src="imagens/Logo/Logo Transparente_1.png" alt="Logo">
         <a href="home.html">Home Page</a>
         <a href="solucao.html">Solução do Problema</a>
         <a href="valor.html">Valor Agregado</a>
