--- a/home.html
+++ b/home.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <nav>
-        <img src="imagens/Logo/Logo Transparente_1.png" alt="Logo">
+        <div class="container">
+            <div class="conteudo">
+                <img src="imagens/Logo/Logo Transparente_1.png" alt="Logo">
+            </div>
+        </div>
         <a href="home.html" class="atual">Home Page</a>
         <a href="solucao.html">Solução do Problema</a>
         <a href="valor.html">Valor Agregado</a>
