Inserção do navegador para o vídeo

--- a/video.html
+++ b/video.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wOrmhOle/Produtos</title>
+    <title>wOrmhOle</title>
     <link rel="shortcut icon" href="imagens/Processamento_1/IMP_Logo B_1.jpg" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css">
 </head>
@@ -11,7 +11,7 @@
     <nav>
         <div class="container">
             <div class="conteudo">
-                <a href="video.html"><img src="imagens/Logo/Logo Transparente_1.png" alt="Logo"></a>
+                <a href="video.html" class="atual"><img src="imagens/Logo/Logo Transparente_1.png" alt="Logo"></a>
             </div>
         </div>
         <a href="home.html">Home Page</a>
@@ -19,19 +19,12 @@
         <a href="valor.html">Valor Agregado</a>
         <a href="patentes.html">Patentes</a>
         <a href="sobre.html">Sobre Nós</a>
-        <a href="produtos.html" class="atual">Produtos</a>
+        <a href="produtos.html">Produtos</a>
         <a href="parceiros.html">Parceiros & Investidores</a>
         <a href="fale.html">Fale Conosco</a>
     </nav>
     <br>
     <main>
-        <ul>
-            <li>Blocos</li>
-            <li>Esquadrias</li>
-            <li>Graute</li>
-            <li>Bombas para injeção de graute</li>
-            <li>Dispositivos auxiliares</li>
-    </ul>
     </main>
     <br>
     <footer>
