--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <nav>
         <div class="container">
             <div class="conteudo">
-                <img src="imagens/Logo/Logo Transparente_1.png" alt="Logo">
+                <a href="video.html"><img src="imagens/Logo/Logo Transparente_1.png" alt="Logo"></a>
             </div>
         </div>
         <a href="home.html" class="atual">Home Page</a>
