Pagina com vídeo

--- a/video.html
+++ b/video.html
@@ -25,6 +25,9 @@
     </nav>
     <br>
     <main>
+        <div class="vid">
+            <video src="video/Wormhole_00_Ads_4.mp4" controls></video>
+        </div>
     </main>
     <br>
     <footer>
