--- a/valor.html
+++ b/valor.html
@@ -11,7 +11,7 @@
     <nav>
         <div class="container">
             <div class="conteudo">
-                <a href="video.html"><img src="imagens/Logo/Logo Transparente_1.png" alt="Logo"></a>
+                <a href="video.html"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
             </div>
         </div>
         <a href="home.html">Home Page</a>
