Mudança de nome

--- a/home.html
+++ b/home.html
@@ -11,10 +11,10 @@
     <nav>
         <div class="container">
             <div class="conteudo">
-                <a href="video.html"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
+                <a href="video.html" class="atual"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
             </div>
         </div>
-        <a href="home.html" class="atual">Home Page</a>
+        <a href="home.html">Home Page</a>
         <a href="solucao.html">Solução do Problema</a>
         <a href="valor.html">Valor Agregado</a>
         <a href="patentes.html">Patentes</a>
@@ -25,18 +25,9 @@
     </nav>
     <br>
     <main>
-        <p><a href="#">Conheça a tecnologia patenteável dos MEGGs para a construção de paredes, pilares e vigas de alvenaria. [Link]</a></p>
-        <p>A wOrmhOle introduz o conceito da construção modular em nível dos menores elementos, denominados MEGGs, aplicável aos blocos, portas, janelas, caixas e qualquer outro objeto a ser embutido na parede.</p>
-        <p>Devido ao processo de grauteamento limpo, introduz o conceito de blocos com acabamento final da parede a ser montada, incluindo pintura, revestimentos e qualquer outro tipo de acabamento desejado.</p>
-        <p>Devido ao bloco estrutural ser de resistência maior ou igual a 14 MPa, devido ao impermeabilizante incorporado ao concreto, devido à opção de fornecimento e uso na cor natural, devido ao processo industrializado de aplicação de pintura, revestimentos, etc., pode introduzir o conceito de garantia vitalícia da parede montada para determinadas condições.</p>
-        <p>Com isso consegue aproveitar todas as vantagens da modulação e eliminar todas as limitações da construção modular tradicional executada com módulos maiores e mais pesados, e normalmente fabricados em série, sem a possibilidade de “projete e faça você mesmo”.</p>
-        <p>MEGG é a sigla utilizada para definir a família dos Elementos Modulares Grauteados em Grupo, do inglês: Modular Elements Grouted in Group.</p>
-        <p>Resumindo o processo de montagem em 2 etapas muito rápidas:</p>
-        <ul>
-            <li>Pré-montagem dos MEGGs à seco e sem encaixes, incluindo tubulações, eletrodutos, armaduras, etc.;</li>
-            <li>Injeção de material aderente somente nas juntas de aderência da parede pré-montada com os MEGGs.</li>
-        </ul>
-        <p>Resultado: Com exceção do piso e da laje, o pavimento fica finalizado, ou seja, com pintura, revestimentos, rodapés, portas, janelas, caixas embutidas, etc. </p>
+        <div class="vid">
+            <video src="video/Wormhole_00_Ads_4.mp4" controls></video>
+        </div>
     </main>
     <br>
     <footer>
