Alteração no Navegador, adicionar nova pagina, mudar a cor do fundo

--- a/home.html
+++ b/home.html
@@ -11,10 +11,11 @@
     <nav>
         <div class="container">
             <div class="conteudo">
-                <a href="video.html" class="atual"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
+                <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
             </div>
         </div>
-        <a href="home.html">Home Page</a>
+        <a href="home.html" class="atual">Home</a>
+        <a href="inicio.html">Inicio</a>
         <a href="solucao.html">Solução do Problema</a>
         <a href="valor.html">Valor Agregado</a>
         <a href="patentes.html">Patentes</a>
@@ -23,15 +24,8 @@
         <a href="parceiros.html">Parceiros & Investidores</a>
         <a href="fale.html">Fale Conosco</a>
     </nav>
-    <br>
-    <main>
         <div class="vid">
             <video src="video/Wormhole_00_Ads_4.mp4" controls></video>
         </div>
-    </main>
-    <br>
-    <footer>
-        <p>Rodape: Não tem conteudo</p>
-    </footer>
 </body>
 </html>
