--- a/inicio.html
+++ b/inicio.html
@@ -11,10 +11,11 @@
     <nav>
         <div class="container">
             <div class="conteudo">
-                <a href="video.html"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
+                <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
             </div>
         </div>
-        <a href="home.html" class="atual">Home Page</a>
+        <a href="home.html">Home</a>
+        <a href="inicio.html" class="atual">Inicio</a>
         <a href="solucao.html">Solução do Problema</a>
         <a href="valor.html">Valor Agregado</a>
         <a href="patentes.html">Patentes</a>
