O video começa automaticamente, mas esta silenciado

--- a/home.html
+++ b/home.html
@@ -25,7 +25,9 @@
         <a href="fale.html">Fale Conosco</a>
     </nav>
         <div class="vid">
-            <video src="video/Wormhole_00_Ads_4.mp4" controls></video>
+            <video autoplay loop muted controls>
+                <source src="video/Wormhole_00_Ads_4.mp4" type="video/mp4">
+            </video>
         </div>
 </body>
 </html>
