Mudança no vídeo da pagina principal

--- a/home.html
+++ b/home.html
@@ -6,6 +6,11 @@
     <title>wOrmhOle</title>
     <link rel="shortcut icon" href="imagens/Processamento_1/IMP_Logo B_1.jpg" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css">
+    <style>
+        body{
+            background-color: darkred;
+        }
+    </style>
 </head>
 <body>
     <nav>
@@ -23,11 +28,15 @@
         <a href="produtos.html">Produtos</a>
         <a href="parceiros.html">Parceiros & Investidores</a>
         <a href="fale.html">Fale Conosco</a>
-    </nav>
+    </nav> <!--
         <div class="vid">
             <video autoplay loop muted controls>
                 <source src="video/Wormhole_00_Ads_4.mp4" type="video/mp4">
             </video>
-        </div>
+        </div> */-->
+        
+        <video autoplay loop muted controls>
+            <source src="video/Wormhole_00_Ads_4.mp4" type="video/mp4">
+        </video>
 </body>
 </html>
