Alteração no video

--- a/home.html
+++ b/home.html
@@ -28,15 +28,11 @@
         <a href="produtos.html">Produtos</a>
         <a href="parceiros.html">Parceiros & Investidores</a>
         <a href="fale.html">Fale Conosco</a>
-    </nav> <!--
+    </nav>
         <div class="vid">
             <video autoplay loop muted controls>
                 <source src="video/Wormhole_00_Ads_4.mp4" type="video/mp4">
             </video>
-        </div> */-->
-        
-        <video autoplay loop muted controls>
-            <source src="video/Wormhole_00_Ads_4.mp4" type="video/mp4">
-        </video>
+        </div> 
 </body>
 </html>
