Mudança do tamanho do vídeo e colocar logo como link

--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
     <nav>
         <div class="container">
             <div class="conteudo">
-                <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
+                <a href="home.html"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
             </div>
         </div>
         <a href="home.html" class="atual">Home</a>
