--- a/fale.html
+++ b/fale.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <a href="home.html"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
+        <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
         <a href="home.html">Home</a>
         <a href="inicio.html">Inicio</a>
         <a href="solucao.html">Solução do Problema</a>
