--- a/home.html
+++ b/home.html
@@ -6,15 +6,10 @@
     <title>wOrmhOle</title>
     <link rel="shortcut icon" href="imagens/Processamento_1/IMP_Logo B_1.jpg" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css">
-    <style>
-        body{
-            background-color: darkred;
-        }
-    </style>
 </head>
 <body>
     <nav>
-        <a href="home.html"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
+        <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
         <a href="home.html" class="atual">Home</a>
         <a href="inicio.html">Inicio</a>
         <a href="solucao.html">Solução do Problema</a>
