Alterações no CSS

--- a/home.html
+++ b/home.html
@@ -6,6 +6,11 @@
     <title>wOrmhOle</title>
     <link rel="shortcut icon" href="imagens/Processamento_1/IMP_Logo B_1.jpg" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css">
+    <style>
+        *{
+            background-color: white;
+        }
+    </style>
 </head>
 <body>
     <nav>
@@ -24,6 +29,6 @@
             <video autoplay loop muted controls>
                 <source src="video/Wormhole_00_Ads_4.mp4" type="video/mp4">
             </video>
-        </div> 
+        </div>
 </body>
 </html>
