--- a/valor.html
+++ b/valor.html
@@ -44,6 +44,26 @@
             <li>Oportunidade de investir na nova tecnologia e triplicar o faturamento.</li>
             <li>Quem não procurar se adaptar às novas tecnologias vai ficar produzindo um produto obsoleto.</li>
         </ul>
+
+
+
+
+        <h1 class="teste">Texto de TESTE</h1>
+        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
+        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
+        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
+        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
+        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
+        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
+        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
+        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
+        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
+        <p class="teste">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed similique, nostrum reprehenderit, cumque possimus laborum quia consequuntur, eius numquam nemo debitis enim dolorem quidem natus nisi at harum perferendis. Obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, error officiis eum placeat blanditiis, pariatur eius rem, dicta soluta consequuntur ea minima corrupti iste optio ut voluptates neque quae aspernatur?</p>
+
+
+
+
+
     </main>
     <br>
     <footer>
