--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav>
-        <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
+        <a href="home.html" class="image"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
         <a href="home.html" class="atual">Home</a>
         <a href="inicio.html">Inicio</a>
         <a href="solucao.html">Solução do Problema</a>
