iframe com conexão funcionando

--- a/produtos.html
+++ b/produtos.html
@@ -24,7 +24,7 @@
     <main>
         <div class="produtoA">
             <ul>
-                <li><a href="" target="frame">Blocos</a></li>
+                <li><a href="pdf/teste.html" target="frame">Blocos</a></li>
                 <li>Esquadrias</li>
                 <li>Graute</li>
                 <li>Bombas para injeção de graute</li>
@@ -32,7 +32,7 @@
             </ul>
         </div>
         <div class="produtoB">
-            <iframe src="imagens/Logo/M.pdf" frameborder="0" name="frame"></iframe>
+            <iframe src="pdf/index.html" frameborder="0" name="frame"></iframe>
         </div>
 
 
