--- a/pdf/index.html
+++ b/pdf/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../estilo/pdf.css">
+    <link rel="stylesheet" href="../estilo/style.css">
 </head>
 <body>
-    <h1>Clique em um produto ao lado.</h1>
+    <main>
+        <h1>Clique em um produto ao lado.</h1>
+    </main>
 </body>
 </html>
