arrumando CSS do produto

--- a/pdf/index.html
+++ b/pdf/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../estilo/style.css">
+    <style>
+        body{
+            background-color: white;
+        }
+        main{
+            background-color: white;
+        }
+    </style>
 </head>
 <body>
     <main>
