--- a/home.html
+++ b/home.html
@@ -6,6 +6,14 @@
     <title>wOrmhOle</title>
     <link rel="shortcut icon" href="imagens/Processamento_1/IMP_Logo B_1.jpg" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css">
+    <style>
+        body{
+            background-color: white;
+        }
+        main{
+            background-color: white;
+        }
+    </style>
 </head>
 <body>
     <nav>
