Alterando padding do logo e colocando after link

--- a/produtos.html
+++ b/produtos.html
@@ -32,7 +32,7 @@
             </ul>
         </div>
         <div class="produtoB" scolling="yes" sandbox="sandbox" referrerpolicy="no-referrer">
-            <iframe src="pdf/index.html" frameborder="0" name="frame"></iframe>
+            <iframe src="pdf/index.html" frameborder="0" name="frame">Seu navegador não é compativel.</iframe>
         </div>
     </main>
     <br>
